# Smart-Esprit

./: README.md  mainn.c
hostle management/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  ggheb.glade.bak  ggheb.gladep.bak
hostle management/autom4te.cache/: output.1  requests  traces.0  traces.1
hostle management/po/: Makefile  Makefile.in
hostle management/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  function.c  function.h  interface.c  interface.c.bak  interface.h.bak  main.c  niveau.txt  searched_students2.txt  student.txt  test-2
hostle management/src/.deps/: callbacks.Po  function.Po
